[gd_scene load_steps=2 format=3 uid="uid://d4mlwrk8guuax"]

[ext_resource type="Script" path="res://level_select_screen.gd" id="1_2ns8w"]

[node name="Level Select Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ns8w")

[node name="TapSongList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -101.0
offset_right = 99.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2

[node name="RegularSongList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 8.0

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
